--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,22 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>My New Hugo Site</title><meta name="Description" content="This is my cool site"><meta property="og:title" content="My New Hugo Site" />
-<meta property="og:description" content="This is my cool site" />
+        <title>OSINT Halo Bl0g</title><meta name="Description" content="This is OSINT Halo Bl0g"><meta property="og:title" content="OSINT Halo Bl0g" />
+<meta property="og:description" content="This is OSINT Halo Bl0g" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" /><meta property="og:site_name" content="My cool site" />
+<meta property="og:url" content="http://example.org/" /><meta property="og:site_name" content="OSINT Halo Bl0g" />
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="My New Hugo Site"/>
-<meta name="twitter:description" content="This is my cool site"/>
-<meta name="application-name" content="My cool site">
-<meta name="apple-mobile-web-app-title" content="My cool site"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://example.org/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="My New Hugo Site">
-    <link rel="feed" href="/index.xml" type="application/rss+xml" title="My New Hugo Site"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<meta name="twitter:title" content="OSINT Halo Bl0g"/>
+<meta name="twitter:description" content="This is OSINT Halo Bl0g"/>
+<meta name="application-name" content="OSINT Halo Bl0g">
+<meta name="apple-mobile-web-app-title" content="OSINT Halo Bl0g"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.svg"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://example.org/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="OSINT Halo Bl0g">
+    <link rel="feed" href="/index.xml" type="application/rss+xml" title="OSINT Halo Bl0g"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"></noscript><link rel="preload" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"></noscript><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "http:\/\/example.org\/","inLanguage": "en-us","description": "This is my cool site","name": "My New Hugo Site"
+        "url": "http:\/\/example.org\/","inLanguage": "en-us","description": "This is OSINT Halo Bl0g","name": "OSINT Halo Bl0g"
     }
     </script></head>
     <body data-header-desktop="fixed" data-header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
@@ -30,7 +28,14 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="My New Hugo Site">My cool site</a>
+            <a href="/" title="OSINT Halo Bl0g"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png"
+        data-srcset="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png, https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png 1.5x, https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png 2x"
+        data-sizes="auto"
+        alt="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png"
+        title="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png" />OSINT Halo Bl0g</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
@@ -42,7 +47,14 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="My New Hugo Site">My cool site</a>
+                <a href="/" title="OSINT Halo Bl0g"><img
+        class="lazyload logo"
+        src="/svg/loading.min.svg"
+        data-src="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png"
+        data-srcset="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png, https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png 1.5x, https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png 2x"
+        data-sizes="auto"
+        alt="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png"
+        title="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png" />OSINT Halo Bl0g</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -53,18 +65,21 @@
             </a></div>
     </div>
 </header><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-subtitle"><div id="id-1" class="typeit"></div></div><div class="links"></div></div>
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><img
+        class="lazyload"
+        src="/svg/loading.min.svg"
+        data-src="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo.png"
+        data-srcset="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo.png, https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo.png 1.5x, https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo.png 2x"
+        data-sizes="auto"
+        alt="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo.png"
+        title="https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo.png" /></div><h1 class="home-title">Launching Soon!</h1><div class="links"><a href="https://twitter.com/OsintHalo" title="Twitter" target="_blank" rel="noopener noreffer me"><i class="fab fa-twitter fa-fw" aria-hidden="true"></i></a></div></div>
 </div></div>
-            </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.111.1">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
-                </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2022 - 2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank"></a></span></div>
-        </div>
-    </footer></div>
+            </main></div>
 
         <div id="fixed-buttons"><a href="#" id="back-to-top" class="fixed-button" title="Back to Top">
                 <i class="fas fa-arrow-up fa-fw" aria-hidden="true"></i>
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment fa-fw" aria-hidden="true"></i>
             </a>
-        </div><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.2/lazysizes.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sharer.js@0.5.1/sharer.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typeit@8.6.0/dist/index.umd.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"data":{"id-1":"This is my cool site"},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"]},"duration":-1,"speed":100}};</script><script type="text/javascript" src="/js/theme.min.js"></script></body>
+        </div><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lazysizes@5.3.2/lazysizes.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sharer.js@0.5.1/sharer.min.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50}};</script><script type="text/javascript" src="/js/theme.min.js"></script></body>
 </html>
